--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,7 @@ height: 96%;
     top: 30%;
     left: 7%;
     opacity: 0.7;
-    font-size: 2.3vw;
+    font-size: 2.3vh;
     font-family: fantasy;
     color: lawngreen;
     text-shadow: 2px 2px 2px black,
