--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ html, body {
     background-image: url(assets/images/wallpaper.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
+    background-size: 100% 100%;
     z-index: -7;
 }
 
@@ -108,6 +108,7 @@ height: 96%;
     3px -3px 3px black,
     -3px 3px 3px black,
     -3px -3px 3px black;
+    margin-bottom: 5%;
 }
 #subHeader {
     font-size: 2vw;
